# VannaSQL-Agent

./: .dockerignore  .env.example  .gitignore  Config.md  DOCKER_SETUP.md  Dockerfile  Makefile  OFFLINE_PACKAGE_SETUP_GUIDE.md  README.md  chroma.sqlite3  demo_caching.py  docker-compose.override.yml  docker-compose.yml  example_usage.py  hello.py  pyproject.toml  reasoning_config_guide.md  reasoning_training.py  reasoning_vanna.py  see_train_data.py  test_rag_caching.py  train-helper.py  web_interface.py
Docs/: OFFLINE_PACKAGE_SETUP_GUIDE.md
app/: debugging.py  example_usage.py  hello.py  train.py
backend/: Dockerfile  pyproject.toml  requirements.txt
backend/app/: example_fastapi_usage.py  example_usage.py  example_usage2.py  hello.py  main.py  play2.py  play_with_rag.py  remove_train_data.py  see_train_data.py  test.py  test2.py  test_plotly_fix.py  test_sql_auto_retry.py  thinking_logic.py  train.py  vana_agent.py  web_interface.py  web_interface_fastapi.py
backend/app/core/: config.py  db.py  security.py
backend/app/logic/: examples-question.yml  reasoning_training.py  reasoning_vanna.py
backend/app/schemas/: models.py
backend/app/vanna/base/: base.py
backend/app/vanna/chromadb/: chromadb_vector.py
backend/app/vanna/fastapi/: AUTO_RETRY_GUIDE.md  README.md  Roboto_Slab  __init__.py  assets.py  auth.py  cache.py  fastapi_api.py  fastapi_app.py  plotly-2.27.0.min.js  thinking_demo.html  vanna_with_thinking.html
backend/app/vanna/flask/: __init__.py
backend/app/vanna/ollama/: ollama.py
