[project]
name = "vannasql-agent"
version = "0.1.0"
description = "VannaSQL Agent with ChromaDB and Ollama integration"
requires-python = ">=3.12"
dependencies = [
    "cryptography>=45.0.5",
    "vanna[chromadb,mysql,ollama,postgres]>=0.7.9",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "requests>=2.31.0",
    "plotly>=5.17.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["vannasql_agent"]
